[package]
name = "yadio"
version = "0.1.0"
edition = "2021"

[dependencies]
symphonia = { version = "0.5.3", features=["aac", "mpa"] }
clap = { version = "4.3.0", features = ["derive"] }
cpal = "0.15.2"
yt_tsu = "0.1.0"
ringbuf = "0.3.3"
youtube_chat = "0.1.4"
tokio = { version = "1.28.2", features = ["full"] }
anyhow = "1.0.71"
owo-colors = "3.5.0"
