[package]
name = "yadio"
version = "0.1.0"
edition = "2021"
authors = ["ckaznable <kami25565@gmail.com>"]
description = "Listen youtube streaming with chat in CLI"
repository = "https://github.com/ckaznable/yadio"
license = "MIT"
keywords = ["youtube", "cli", "streaming"]

[dependencies]
symphonia = { version = "0.5.3", features=["aac", "mpa"] }
clap = { version = "4.3.0", features = ["derive"] }
cpal = "0.15.2"
yt_tsu = "0.1.0"
ringbuf = "0.3.3"
youtube_chat = "0.2.0"
tokio = { version = "1.28.2", features = ["full"] }
anyhow = "1.0.71"
owo-colors = "3.5.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
